# boson_dsph

./: .gitignore  .gitmodules  README.md  setup.cfg
boson_dsph/: density.py  gsph2wsph  pipeline_for_single_draw_mpi.py  stats.py  test_equality.py
configs/: leoii_15.yaml  leoii_19.yaml  leoii_20.yaml  leoii_21.yaml  leoii_22.yaml  leoii_23.yaml  leoii_24.yaml
data/hypothesis_test/: leoii_15.npz  leoii_19.npz  leoii_20.npz  leoii_21.npz  leoii_22.npz  leoii_23.npz  leoii_24.npz
notebook/: mnras.mplstyle  plots_prl.ipynb
