[metadata]
name = boson_dsph
version = 0.1
author = Tim Zimmermann
author_email = timzi@uio.no
description = Code for the reproduction of the boson DM mass limit based on jaxsp
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    'jaxsp @ git+ssh://git@github.com/james-alvey-42/jaxsp@main'
    matplotlib
    pandas
    yt

[options.package_data]
* = README.md
